--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">JBS</string>
     <string name="Terms_Conditions">Terms and Conditions</string>
+    <string name="Edit">Edit</string>
+    <string name="KeyProfileUID">K_ProfileUID</string>
     <string name="BotMenu_search">Search</string>
     <string name="BotMenu_work">Work</string>
     <string name="BotMenu_event">Event</string>
@@ -39,4 +41,19 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="VerifyPhone_Info">We have sent you an SMS with a code to the above number.</string>
     <string name="validate">Validate</string>
+    <string name="title_activity_login">Sign in</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="save">Save</string>
+    <string name="update">Update</string>
 </resources>
