--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,6 @@
         Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form,
         accompanied by English versions from the 1914 translation by H. Rackham.
     </string>
-    <string name="phone_number">Phone Number</string>
     <string name="next">Next</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -56,4 +55,6 @@
     </string>
     <string name="save">Save</string>
     <string name="update">Update</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="first_name">First Name</string>
 </resources>
