--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="update">Update</string>
     <string name="phone_number">Phone Number</string>
     <string name="first_name">First Name</string>
+    <string name="settings">Settings</string>
+    <string name="manage_groups">Manage Groups</string>
 </resources>
